# toymath

./: .gitignore  Cargo.toml  README.md
benches/: sqrt.rs  trig.rs
lib/extended-float/: Cargo.toml
lib/extended-float-macros/: Cargo.toml
lib/extended-float-macros/src/: lib.rs
lib/extended-float-macros/tests/: constants.rs
lib/extended-float-sys/: Cargo.toml  build.rs
lib/extended-float-sys/src/: extended.c  lib.rs
lib/extended-float/src/: consts.rs  lib.rs
lib/extended-float/tests/: basic.rs
lib/toydecimal/: Cargo.toml
lib/toydecimal/src/: digit.rs  lib.rs  test.rs
lib/toydecimal/src/int/: math.rs  mod.rs
src/: lib.rs  log.rs  pow.rs  sqrt.rs  trig.rs  utils.rs
