[package]
name = "toymath"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
# It's a toy and probably isn't very correct
publish = false

[dependencies]
quickcheck = "0.6"
quickcheck_macros = "0.6"

[dev-dependencies]
criterion = { version = "0.2", features = ["real_blackbox"] }
num = "^0.2"

[[bench]]
name = "sqrt"
harness = false