[package]
name = "toymath"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
# It's a toy and probably isn't very correct
publish = false

[dependencies]
quickcheck = "0.6"
quickcheck_macros = "0.6"
lazy_static = "1"
num-traits = "0.2"
ordered-float = "0.5"

# Extended float
extended-float = { path = "lib/extended-float" }
extended-float-macros = { path = "lib/extended-float-macros" }

[dev-dependencies]
criterion = { version = "0.2", features = ["real_blackbox"] }
ordered-float = "^0.5.0"
num = "^0.2"

[[bench]]
name = "sqrt"
harness = false