[package]
name = "extended-float-macros"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
# It's a toy and probably isn't very correct
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.14.4", features = ["extra-traits"] }
quote = "0.6.3"
extended-float-sys = { path = "../extended-float-sys" }
