[package]
name = "extended-float"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
# It's a toy and probably isn't very correct
publish = false

[dependencies]
libc = "0.2.42"
num-traits = "0.2.5"

# Extended float
extended-float-sys = { path = "../extended-float-sys" }
extended-float-macros = { path = "../extended-float-macros" }
